<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical">
        
        <TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent">
            
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/from" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
        <DatePicker android:id="@+id/fromDate" android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
        </TableRow>
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/to" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
        <DatePicker android:id="@+id/toDate" android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
        </TableRow>
        </TableLayout>
            <RadioGroup android:id="@+id/typeRadio" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <RadioButton android:layout_height="wrap_content" android:id="@+id/goodRadio" android:layout_width="wrap_content" android:text="@string/good" android:checked="true"></RadioButton>
                <RadioButton android:layout_height="wrap_content" android:id="@+id/badRadio" android:layout_width="wrap_content" android:text="@string/bad"></RadioButton>
            </RadioGroup>
            <Spinner android:id="@+id/typeSpinner" android:layout_width="fill_parent" android:layout_height="wrap_content"></Spinner>
            <Button android:text="@string/search" android:id="@+id/searchBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_horizontal"></Button>
        
        
    </LinearLayout>
